# cpphs

./: CHANGELOG  COPYRIGHT  CppIfdef.hs  Cpphs.hs  CpphsTest.hs  HashDefine.hs  ListUtil.hs  MacroPass.hs  Main.hs  Makefile  Makefile.nhc98  ParseLib.hs  Position.hs  README  ReadFirst.hs  RunCpphs.hs  SymTab.hs  Tokenise.hs  cpphs-GK9by9.hs  cpphs.cabal  cpphs.compat  cpphs.hs  cpphs.hugs  cpphs.spec  cpphsTest.hs  macro.hs
Language/Preprocessor/: Cpphs.hs  Unlit.hs
Language/Preprocessor/Cpphs/: CppIfdef.hs  HashDefine.hs  MacroPass.hs  Options.hs  Position.hs  ReadFirst.hs  RunCpphs.hs  Tokenise.hs
Text/ParserCombinators/: HuttonMeijer.hs
docs/: cpphs.1  design  index.html
tests/: expect11  expect12  expect13  expect14  expect15  expect16  expect17  expect19  expect20  expect21  expect22  expect35  expect36  expect37  expect40  expect42  expect44  expect46  expect5  expect6  expect7  expect8  expect9  expectfile1  expectfile2  expectfile3  multiline  runtests  stringise  wrongline
